--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>TimeKiller</title>
+	<title>Time Killer</title>
 	<link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
-<body id="js-body">
-	<button onclick="reload()">Reload page</button>
-	<h2 id="score">Your score: 0</h2>
-	<p>!Click red block!</p>
+<body class="body" id="js-body">
+	<div class="info">
+		<button onclick="restart()">Restart game</button>
+		<h2 id="score">Your score: 0</h2>
+		<p>!Click red block!</p>
+	</div>
 	<div class="game_place" id="js-game-place"></div>
 	<script type="text/javascript" src="./app.js"></script>
 </body>
